--- a/desafio.html
+++ b/desafio.html
@@ -1,11 +1,56 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Desafio html DIO</title>
 </head>
 <body>
-    
+    <h1>TAGS HTML</h1><hr>
+    <a href="tags.html">
+    <h2>O que são tags <strong>HTML</strong></h2></a>
+    <h2><i>principais tags HTML</i></h2>
+    <ul>
+        <a href="h1_h6.html"
+             <li>h1 ate h6</li></a><br>
+        <a href="p.html"
+             <li>p</li></a><br>
+        <a href="mark.html"
+             <li>mark</li></a><br>
+        <a href="small.html"
+             <li>small</li></a><br>
+        <a href="i.html"
+             <li>i</li></a><br>
+        <a href="u.html"
+             <li>u</li></a><br>
+        <a href="strong.html"
+             <li>strong</li></a><br>
+        <a href="ol.html"
+             <li>ol</li></a><br>
+        <a href="ul.html"
+             <li>ul</li></a><br>
+        <a href="li.html"     
+             <li>li</li></a><br>
+        <a href="a.html"     
+            <li>a</li></a><br>
+        <a href="hr.html"    
+            <li>hr</li></a><br>
+        <a href="sub.html"   
+            <li>sub</li></a><br>
+        <a href="sup.html"    
+            <li>sup</li></a><br>
+        <a href="blockquote.html"   
+            <li>blockquote</li></a><br>
+        <a href="font.html"    
+            <li>font</li></a><br>
+        <a href="del.html"    
+            <li>del</li></a><br>
+        <a href="abbr.html"    
+            <li>abbr</li></a><br>
+
+    </ul>
+
+
+
 </body>
 </html>
