desafio_html_DIO

--- a/h1_h6.html
+++ b/h1_h6.html
@@ -49,7 +49,7 @@
            <li>H6 – Jardim botânico</li> 
            </ol>
             </p>
-    <a href="desafio.html">Voltar</a><br>
+    <a href="HOME.html">Voltar</a><br>
 
     <a href="https://rockcontent.com/br/blog/o-que-sao-heading-tags/">site referencia</a>
 </body>
