--- a/small.html
+++ b/small.html
@@ -9,7 +9,7 @@
     <h1>small: o elemento de comentário lateral</h1><hr>
     <p>representa comentários laterais e letras pequenas, como direitos autorais e texto jurídico, independente de seu estilo de apresentação. Por padrão, ele renderiza o texto em um tamanho de fonte menor, como de a </p>
     <a href="">site de referência</a><br>
-    <a href="desafio.html">voltar</a>
+    <a href="HOME.html">voltar</a>
     
 </body>
 </html>
