--- a/tags.html
+++ b/tags.html
@@ -10,8 +10,8 @@
     <p>Tags HTML são instruções que informam ao navegador como formatar o texto. Você pode usar tags para definir itálico, quebras de linha, objetos, bullet points e muito mais.
 
         Essas tags estão presentes no HTML (Hypertext Markup Language) de todas as páginas da internet.</p>
-    <a href="desafio.html">Voltar</a>   
-    
+    <a href="HOME.html">Voltar</a>   
+
 
     
 </body>
