--- a/i.html
+++ b/i.html
@@ -6,9 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-    <h1></h1><hr>
-    <a href="HOME.html">voltar</a>
+    <h1>tag "i"</h1><hr>
+    <p>representa uma parte do texto que é destacada do restante por algum motivo, por exemplo, termos técnicos, expressões de outros idiomas ou pensamentos de personagens fictícios. Normalmente, é apresentado com o uso do tipo "itálico".</p><br>
+    <h2>Exemplo</h2>
+    <P><p>
+        A expressão em latim <i class="latin">Veni, vidi, vici</i> é frequentemente
+        mencionada na música, na arte e na literatura.
+      </p></P>
 
+    
+    <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML/Element/i">site de referência</a><br>
+    <a href="HOME.html">voltar</a>
+   
     
 </body>
 </html>
