--- a/li.html
+++ b/li.html
@@ -6,7 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-    <h1></h1><hr>
+    <h1>Tag "li"</h1><hr>
+    <p>O elemento HTML "li" (ou a Lista dos Itens de um elemento HTML) é usado para representar um item que faz parte de uma lista. Este item deve estar contido em um elemento pai: uma lista ordenada ("ol"), uma lista desordenada ("ul") , ou um menu ("menu" (en-US)) e representa uma única entidade dessa lista. Em menus e listas desordenadas a relação de itens é exibida, normalmente, usando pontos de marcação (as bolinhas). Em listas ordenadas eles são, comumente, mostrados com algum contador ascendente - como um número, ou letra - à sua esquerda.</p>
+    <h2>Exemplo</h2>
+    <p><ol>
+        <li>primeiro item</li>
+        <li>segundo item</li>
+        <li>terceiro item</li>
+      </ol></p>
+    <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML/Element/li">site de referência</a><br>
     <a href="HOME.html">voltar</a>
 
     
