--- a/p.html
+++ b/p.html
@@ -8,6 +8,18 @@
 <body>
     <h1>"P" o elemento Parágrafo</h1><hr>
     <p>O elemento HTML "P" representa um parágrafo. Em mídias visuais, parágrafos são representados como blocos indentados de texto com a primeira letra avançada e separados por linhas em branco. Já em HTML, parágrafos são usados para agrupar conteúdos relacionados de qualquer tipo, como imagens e campos de um formulário.</p>
+    <h2>Exemplo</h2>
+        <p><p>
+            Este é o primeiro parágrafo do texto. Este é o primeiro parágrafo do texto.
+            Este é o primeiro parágrafo do texto. Este é o primeiro parágrafo do texto.
+          </p>
+          
+          <p>
+            Este é o segundo parágrafo do texto. Este é o segundo parágrafo do texto. Este
+            é o segundo parágrafo do texto. Este é o segundo parágrafo do texto.
+          </p></p>
+    
+
     <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML/Element/p">site de referencia</a><br>
     <a href="HOME.html">voltar</a>
    
