--- a/strong.html
+++ b/strong.html
@@ -6,7 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <h1></h1><hr>
+    <h1>Tag "STRONG"</h1><hr>
+    <p>O elemento HTML "strong" dá ao texto uma forte importância, e é tipicamente mostrado em negrito.</p>
+    <h2>Exemplo</h2>
+    <p><p>
+        Ao fazer x é <strong>imperativo</strong> que se faça y antes de prosseguir.
+      </p></p>
+    <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML/Element/strong">site de referência</a><br>
     <a href="HOME.html">voltar</a>
 
     
