--- a/ol.html
+++ b/ol.html
@@ -6,7 +6,16 @@
     <title>Document</title>
 </head>
 <body>
-    <h1></h1><hr>
+    <h1>Tag "ol"</h1><hr>
+    <p>O Elemento HTML "ol" (ou Elemento HTML de lista ordenada) representa uma lista de itens ordenados. De forma característica esses itens ordenados em uma lista são mostrados com uma contagem que os precede, que pode ser de qualquer tipo, como numerais, letras, algarismos romanos, ou simples símbolos. Esse modelo numerado não é definido na descrição html da página, mas na folha de estilos CSS associada, pela propriedade</p>
+    <h2>Exemplo</h2>
+    <p><ol>
+        <li>primeiro item</li>
+        <li>segundo item</li>
+        <li>terceiro item</li>
+      </ol></p>
+
+    <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML/Element/ol">site de referência</a><br>
     <a href="HOME.html">voltar</a>
 
     
