--- a/ul.html
+++ b/ul.html
@@ -6,7 +6,16 @@
     <title>Document</title>
 </head>
 <body>
-    <h1></h1><hr>
+    <h1>Tag "ul"</h1><hr>
+    <p>O elemento HTML "ul" (ou elemento HTML de Lista desordenada) representa uma lista de itens sem ordem rígida, isto é, uma coleção de itens que não trazem uma ordenação numérica e as suas posições, nessa lista, são irrelevantes. Caracteristicamente, os itens em uma lista desordenada são exibidos com um marcador que pode ter várias formas, como um ponto, um círculo, ou um quadrado. O tipo de marcador não é definido na descrição HTML da página, mas na CSS associada, utilizando a propriedade</p>
+    <h2>Exemplo</h2>
+    <p><ul>
+        <li>primeiro item</li>
+        <li>segundo item</li>
+        <li>terceiro item</li>
+      </ul></p>
+
+    <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML/Element/ul">site de referência</a><br>
     <a href="HOME.html">voltar</a>
 
     
