desafio_html_DIO

--- a/abbr.html
+++ b/abbr.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>tag abbr</title>
 </head>
 <body>
-    <h1></h1><hr>
+    <h1>Tag "abbr"</h1><hr>
+    <p>O Elemento _HTML "abbr" _(ou Elemento de Abreviação HTML) representa uma abreviação e opcionalmente fornece uma descrição completa para ela. Se presente, o atributo title deve conter a descrição completa e apenas ela.</p>
+    <h2>Exemplo</h2>
+    <P><p>Obama é presidente dos <abbr title="Estados Unidos da América">EUA</abbr></p></P>
+    <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML/Element/abbr">site de referência</a><br>
     <a href="HOME.html">voltar</a>
 
     
