--- a/blockquote.html
+++ b/blockquote.html
@@ -3,10 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>tag blockquote</title>
 </head>
 <body>
-    <h1></h1><hr>
+    <h1>blockquote: O elemento Block Quotation</h1><hr>
+    <p>O elemento HTML indica que o texto incluído é uma citação estendida. Normalmente, isso é renderizado visualmente por recuo (consulte as Notas para saber como alterá-lo). Uma URL para a fonte da citação pode ser fornecida usando o atributo, enquanto uma representação de texto da fonte pode ser fornecida usando o elemento.</p>
+    <h2>Exemplo</h2>
+    <p><blockquote cite="https://datatracker.ietf.org/doc/html/rfc1149">
+        <p>
+            As transportadoras aviárias podem fornecer alto atraso, baixo rendimento e baixa altitude
+            serviço. A topologia de conexão é limitada a um único caminho ponto a ponto
+            para cada operadora, usado com operadoras padrão, mas muitas operadoras podem ser usadas
+            sem interferência significativa entre si, fora do início da primavera. Esse
+            é por causa do espaço éter 3D disponível para as operadoras, em contraste com
+            o éter 1D usado pelo IEEE802.3. As transportadoras têm uma colisão intrínseca
+            sistema de prevenção, o que aumenta a disponibilidade.
+            </p>
+            </blockquote>
+
+        </p>
+      
+    <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/blockquote">site de referência</a><br>
     <a href="HOME.html">voltar</a>
 
     
