--- a/del.html
+++ b/del.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>tag del</title>
 </head>
 <body>
-    <h1></h1><hr>
+    <h1>Tag "del"</h1><hr>
+    <p>O elemento HTML "del" (ou Elemento HTML de Texto Excluído) representa uma parte do texto que foi excluída de um documento. Este elemento é (não necessariamente) renderizado pelos navegadores com uma linha entre o texto.</p>
+    <h2>Exemplo</h2>
+    <p><p><del>This text has been deleted</del></p></p>
+    <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML/Element/del">site de referência</a><br>
     <a href="HOME.html">voltar</a>
 
     
