--- a/font.html
+++ b/font.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>tag font</title>
 </head>
 <body>
-    <h1></h1><hr>
+    <h1>Tag "font"</h1><hr>
+    <p>O elemento HTML define o tamanho da fonte, cor e face do seu conteúdo.</p>
+    
+    <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/font">site de referência</a><br>
     <a href="HOME.html">voltar</a>
 
     
