--- a/sub.html
+++ b/sub.html
@@ -3,10 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>tag sub</title>
 </head>
 <body>
-    <h1></h1><hr>
+    <h1>sub: O elemento Subscrito</h1><hr>
+    <p>O elemento HTML especifica o texto embutido que deve ser exibido como subscrito apenas por motivos tipográficos. Os subscritos normalmente são renderizados com uma linha de base reduzida usando texto menor.</p>
+    <h2>Exemplo</h2>
+    <p><p>
+        According to the computations by Nakamura, Johnson, and Mason<sub>1</sub> this
+        will result in the complete annihilation of both particles.
+      </p></p>
+    <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/sub"> site de referência</a><br>
     <a href="HOME.html">voltar</a>
 
     
