--- a/sup.html
+++ b/sup.html
@@ -3,10 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>tag sup</title>
 </head>
 <body>
-    <h1></h1><hr>
+    <h1>sup: O elemento sobrescrito</h1><hr>
+    <p>O elemento HTML especifica o texto embutido que deve ser exibido como sobrescrito apenas por motivos tipográficos. Os sobrescritos geralmente são renderizados com uma linha de base elevada usando texto menor.</p>
+    <h2>Exemplo</h2>
+    <p><p>
+        One of the most common equations in all of physics is <var>E</var>=<var>m</var
+        ><var>c</var><sup>2</sup>.
+      </p></p>
+    <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/sup">site de referência</a><br>
     <a href="HOME.html">voltar</a>
 
     
