--- a/a.html
+++ b/a.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>tag a</title>
 </head>
 <body>
     <h1>Tag "a"</h1><hr>
