--- a/small.html
+++ b/small.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Small</title>
+    <title>tag small</title>
 </head>
 <body>
     <h1>small: o elemento de comentário lateral</h1><hr>
