desafio_html_DIO

--- a/a.html
+++ b/a.html
@@ -10,7 +10,7 @@
     <p>O elemento "a" em HTML (ou elemento âncora), com o atributo href cria-se um hiperligação nas páginas web, arquivos, endereços de emails, ligações na mesma página ou endereços na URL. O conteúdo dentro de cada "a" precisará indicar o destino do link.</p>
     <h2>Exemplo</h2>
     <p>"a href="HOME.html""/a"</p>
-    <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML/Element/a">site de referência</a><br>
+    <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML/Element/a" target="_blank">site de referência</a><br>
     <a href="HOME.html">voltar</a>
 
     
