--- a/abbr.html
+++ b/abbr.html
@@ -10,7 +10,7 @@
     <p>O Elemento _HTML "abbr" _(ou Elemento de Abreviação HTML) representa uma abreviação e opcionalmente fornece uma descrição completa para ela. Se presente, o atributo title deve conter a descrição completa e apenas ela.</p>
     <h2>Exemplo</h2>
     <P><p>Obama é presidente dos <abbr title="Estados Unidos da América">EUA</abbr></p></P>
-    <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML/Element/abbr">site de referência</a><br>
+    <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML/Element/abbr" target="_blank">site de referência</a><br>
     <a href="HOME.html">voltar</a>
 
     
