--- a/blockquote.html
+++ b/blockquote.html
@@ -23,7 +23,7 @@
 
         </p>
       
-    <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/blockquote">site de referência</a><br>
+    <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/blockquote" target="_blank">site de referência</a><br>
     <a href="HOME.html">voltar</a>
 
     
