--- a/del.html
+++ b/del.html
@@ -10,7 +10,7 @@
     <p>O elemento HTML "del" (ou Elemento HTML de Texto Excluído) representa uma parte do texto que foi excluída de um documento. Este elemento é (não necessariamente) renderizado pelos navegadores com uma linha entre o texto.</p>
     <h2>Exemplo</h2>
     <p><p><del>This text has been deleted</del></p></p>
-    <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML/Element/del">site de referência</a><br>
+    <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML/Element/del" target="_blank">site de referência</a><br>
     <a href="HOME.html">voltar</a>
 
     
