--- a/font.html
+++ b/font.html
@@ -9,7 +9,7 @@
     <h1>Tag "font"</h1><hr>
     <p>O elemento HTML define o tamanho da fonte, cor e face do seu conteúdo.</p>
     
-    <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/font">site de referência</a><br>
+    <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/font" target="_blank">site de referência</a><br>
     <a href="HOME.html">voltar</a>
 
     
