--- a/h1_h6.html
+++ b/h1_h6.html
@@ -51,6 +51,6 @@
             </p>
     <a href="HOME.html">Voltar</a><br>
 
-    <a href="https://rockcontent.com/br/blog/o-que-sao-heading-tags/">site referencia</a>
+    <a href="https://rockcontent.com/br/blog/o-que-sao-heading-tags/" target="_blank">site referencia</a>
 </body>
 </html>
