--- a/hr.html
+++ b/hr.html
@@ -20,7 +20,7 @@
         Este é o segundo parágrafo do texto. Este é o segundo parágrafo do texto. Este
         é o segundo parágrafo do texto. Este é o segundo parágrafo do texto.
       </p></p>
-    <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML/Element/hr">site de referência</a><br>
+    <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML/Element/hr" target="_blank">site de referência</a><br>
     <a href="HOME.html">voltar</a>
 
     
