--- a/li.html
+++ b/li.html
@@ -14,7 +14,7 @@
         <li>segundo item</li>
         <li>terceiro item</li>
       </ol></p>
-    <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML/Element/li">site de referência</a><br>
+    <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML/Element/li" target="_blank">site de referência</a><br>
     <a href="HOME.html">voltar</a>
 
     
