--- a/ol.html
+++ b/ol.html
@@ -15,7 +15,7 @@
         <li>terceiro item</li>
       </ol></p>
 
-    <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML/Element/ol">site de referência</a><br>
+    <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML/Element/ol" target="_blank">site de referência</a><br>
     <a href="HOME.html">voltar</a>
 
     
