--- a/p.html
+++ b/p.html
@@ -20,7 +20,7 @@
           </p></p>
     
 
-    <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML/Element/p">site de referencia</a><br>
+    <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML/Element/p" target="_blank">site de referencia</a><br>
     <a href="HOME.html">voltar</a>
    
 
