--- a/strong.html
+++ b/strong.html
@@ -12,7 +12,7 @@
     <p><p>
         Ao fazer x é <strong>imperativo</strong> que se faça y antes de prosseguir.
       </p></p>
-    <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML/Element/strong">site de referência</a><br>
+    <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML/Element/strong" target="_blank">site de referência</a><br>
     <a href="HOME.html">voltar</a>
 
     
