--- a/sub.html
+++ b/sub.html
@@ -13,7 +13,7 @@
         According to the computations by Nakamura, Johnson, and Mason<sub>1</sub> this
         will result in the complete annihilation of both particles.
       </p></p>
-    <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/sub"> site de referência</a><br>
+    <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/sub" target="_blank"> site de referência</a><br>
     <a href="HOME.html">voltar</a>
 
     
