--- a/sup.html
+++ b/sup.html
@@ -13,7 +13,7 @@
         One of the most common equations in all of physics is <var>E</var>=<var>m</var
         ><var>c</var><sup>2</sup>.
       </p></p>
-    <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/sup">site de referência</a><br>
+    <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/sup" target="_blank">site de referência</a><br>
     <a href="HOME.html">voltar</a>
 
     
