--- a/i.html
+++ b/i.html
@@ -15,7 +15,7 @@
       </p></P>
 
     
-    <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML/Element/i">site de referência</a><br>
+    <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML/Element/i" target="_blank">site de referência</a><br>
     <a href="HOME.html">voltar</a>
    
     
