--- a/ul.html
+++ b/ul.html
@@ -15,7 +15,7 @@
         <li>terceiro item</li>
       </ul></p>
 
-    <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML/Element/ul">site de referência</a><br>
+    <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML/Element/ul" target="_blank">site de referência</a><br>
     <a href="HOME.html">voltar</a>
 
     
